fix: fix description layout issues

--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -62,5 +62,6 @@
 
 /* professional experience section */
 .professionalExperience span:last-child {
+  grid-column: 1 / -1;
   font-weight: normal;
 }
